fix quote section's alignment of <small> for small screens

--- a/src/scss/quotes.section.scss
+++ b/src/scss/quotes.section.scss
@@ -45,6 +45,10 @@ section:is(#quotes) {
         .quotee {
           text-align: center;
         }
+
+        small {
+          justify-content: center;
+        }
       }
     }
   }
